# pre-atlas

./: .aegis-agents.json  .env.example  .gitignore  AGENT_BELT.md  ARCHITECTURE.md  ATLAS_CORE_UI_MAP.md  ATLAS_CORE_UI_VISUAL.md  ATLAS_HEADLESS_MAP.md  ATLAS_MASTER_PLAN.md  BACKEND_AUDIT.md  CAPSULES.md  CAPSULE_self-mirror-saas.md  CLAUDE.md  CLAUDE_CODE_PROMPTS.md  CLAUDE_INVENTORY.md  CODEBASE_ANALYSIS.md  COMPONENT_GRAPH.json  CONTEXT_FOR_WEB.md  CONTEXT_PACKET.md  CYCLEBOARD_COMPLETE_REFERENCE.md  DATAFLOW_GRAPH.json  DROPLIST_SHIP_2026-06-26.md  FILE_MAP.md  FRONTEND_AUDIT.md  HANDOFF_compile-seed-repos_2026-06-27.md  LEGACY_CODE_AUDIT.md  LICENSE  ONBOARDING.md  PHASE_ROADMAP.md  PNG_SUBSTRATE_SEED.md  PRE_ATLAS_MAP.md  Pre_Atlas_System_Debrief.json  README.md  REPO_FORENSIC_TRACE_2026-06-26.md  REPO_RUNDOWN.md  RISK_ANALYSIS.md  SCRAPER_AUDIT_CODEX_REVIEW.md  SCRAPER_PIPELINE_AUDIT.md  START-HERE.md  SYSTEM_FREEZE_SPEC.md  (+26 more)
services/_retired/mirofish/: .env.example  RETIRED.md  docker-compose.yml  pyproject.toml
services/_retired/mosaic-orchestrator/: RETIRED.md  atlas.surface.json  pyproject.toml
services/atlas-map-api/: .gitignore  README.md  SELF_DESCRIBE.md  atlas.surface.json  pyproject.toml
services/atlas-map-api/scripts/: verify_overlays.py
services/atlas-map-api/tests/: test_call_counter.py  test_describe.py  test_describe_mcp.py  test_gateway.py  test_lattice_bandit.py  test_lattice_graph.py  test_lattice_ledger_feed.py  test_lattice_skill_nodes.py  test_lattice_supervisor.py  test_lattice_viewer_server.py  test_mcp.py  test_receipt_store.py  test_route.py  test_seam.py  test_server.py  test_status.py
services/cognitive-sensor/: ACCELERATION_PHRASES.md  AGENTS.md  ATLAS_LAWS.md  BEHAVIORAL_AUDIT.md  BELIEF_CORE.md  BELIEF_RULES.md  BOOK_OUTLINE.md  BUSINESS_IDEAS_CLUSTERED.md  CONVERSATION_PATTERNS.md  DECISION_ENGINE.md  DEEP_PSYCHOLOGICAL_PROFILE.md  DERAILMENT_FACTORS.md  Dockerfile  EMOTIONAL_PROFILE.md  GROWTH_REPORT.md  IDEA_REGISTRY.md  IMPLEMENTATION_COMPLETE.md  LANGUAGE_LOOPS.md  LEVERAGE_MAP.md  MY_COGNITIVE_PROFILE.md  QUICKSTART.md  QUICKSTART_VECTORIZATION.md  README.md  RESURFACER_LOG.md  RUNTIME.md  STALL_SIGNATURES.md  STATE_HISTORY.md  SYSTEM_EVALUATION.md  SYSTEM_INVENTORY.json  SYSTEM_MAP.md  TECHNICAL.md  THE_CYCLE.md  THE_THEORY.md  VECTORIZATION.md  VECTORIZATION_SUMMARY.md  aegis_client.py  agent_book_miner.py  agent_classifier.py  agent_classifier_convo.py  agent_deduplicator.py  (+153 more)
services/cognitive-sensor/.claude/: settings.local.json
services/cognitive-sensor/_archive/: belief_core.py  belief_grammar.py  brain.py  brain_2.py  cluster_business_topics.py  cluster_topics.py  cycleboard_app3_original.html  decision_engine.py  language_loops.py  profile_report.py  search_loops.py  semantic_loops.py  test_vectorization.py
services/cognitive-sensor/cycleboard/: COMPONENT_REGISTRY.md  LLM_CONTEXT.md  README.md  cli.ts  cognitive_state.json  cycleboard_cognitive.html  index.html  test-ai-integration.js
services/cognitive-sensor/docs/: DUMP_CONVERSATION_SPEC.md  PARSE_VERIFY_SPEC.md
services/cognitive-sensor/extractions/: 1075_what_is_psychology.md  1136_understanding_doublespeak.md  1141_prompt_creation_collaboration.md  1207_understanding_relationship_dynamics.md  1209_irritation_and_hunger_struggles.md  1216_cleaning_reflections_and_feelings.md  1222_awkward_growth_calibration_phase.md  1226_selfish_interactions_narrative.md  1247_understanding_gaslighting_effects.md  1356_extrinsic_vs_intrinsic_rewards.md  143_ai_workflow_orchestration.md  266_chatgpt_o1_overview.md  359_introduction_to_binary_code.md  430_the_power_of_pleasing.md  546_anger_and_intensity.md  889_crm_process_analysis.md  969_chatgpt_and_isolation.md  986_fear_of_success_cycle.md
services/cognitive-sensor/fuzz/: __init__.py  cli.py  envelope.py  generator.py  pull.py  runner.py  scorer.py  shapes.py
services/cognitive-sensor/mirofish/: config.py
services/cognitive-sensor/tests/: conftest.py  test_atlas_approve.py  test_atlas_data.py  test_atlas_graph.py  test_atlas_layers.py  test_atlas_layout.py  test_atlas_projection.py  test_atlas_render.py  test_closure_quality.py  test_cycleboard_push.py  test_governor.py  test_loops.py  test_proposal_runner.py  test_routing.py
services/cortex/: README.md  atlas.surface.json  dashboard.html  pyproject.toml  start.bat
services/cortex/tests/: test_contracts.py  test_optogon_wire.py  test_planner.py  test_reviewer.py
services/droplist/: .gitignore  BIBLE.md  DOCTRINE.md  DropList.spec  README.md  SMOKE_AND_DOD.md  atlas.surface.json  pyproject.toml  test_ai.py  test_atlas_emit.py  test_atlas_retry.py  test_atlas_signal.py  test_atlas_validate.py  test_auth.py  test_budget_guard.py  test_chains.py  test_daemon.py  test_drops.py  test_dropstore.py  test_graph.py  test_intake.py  test_keys.py  test_markoff.py  test_persist.py  test_pwa.py  test_retrieval_external.py  test_scheduler.py  test_server.py  test_smoke_gates.py  test_tools.py
services/droplist/PACKETS/: 001_remove_router_orphan.md  002_windows_portable_python.md  003_python_command_actually_invokable.md  004_audit_path_assumes_invocable.md  005_atlas_seam_contract.md  006_live_atlas_signal_emission.md  007_lens_seam_cleanup.md  008_lattice_consumer_wire.md  (+3 more)
services/memory-hub/: .gitignore  README.md  atlas.surface.json  pyproject.toml
services/openclaw/: .env.example  Dockerfile  atlas.surface.json  pyproject.toml
services/optogon/: atlas.surface.json  pyproject.toml  start.bat
services/perception/: .gitignore  BUILD_LOG.md  README.md  atlas.surface.json  pyproject.toml
services/search-stack/: .env.example  .gitignore  BIBLE.md  README.md  atlas.surface.json  pyproject.toml
services/triangulation/: .gitignore  BUILD_LOG.md  README.md  atlas.surface.json  pyproject.toml
shardstate/: .gitignore  README.md  pyproject.toml
shardstate/tests/: test_clock.py  test_examples_demo.py  test_hashing.py  test_ops.py  test_store.py  test_sync.py  test_wire.py
tools/atlas-cli/: .gitignore  README.md  atlas.surface.json  pyproject.toml
(+1645 files in other folders)
