[project]
name = "atlas-map-api"
version = "0.1.0"
description = "Live HTTP API over the Pre Atlas system map — exposes systems, neighbors, paths, locate, search, signals. The 'GPS for code' substrate that CLI, MCP, and the viewer all compose on."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "rapidfuzz>=3.10",
    "fastmcp>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[project.scripts]
atlas-map-api = "atlas_map_api.server:run"
atlas-map-mcp = "atlas_map_api.mcp_server:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
