[project]
name = "cortex"
version = "0.1.0"
description = "Atlas autonomous execution layer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "nats-py>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Both top-level tests/ and per-module tests under src/cortex/<module>/tests/.
# The per-module pattern is established by ghost_executor and dispatcher.
testpaths = ["tests", "src/cortex"]
python_files = ["test_*.py"]
