[project]
name = "droplist-packet-engine"
version = "0.1.0"
description = "Mini Ship #1: CLI-first RAG-DAG intake / Packet Engine for DropList / Atlas"
requires-python = ">=3.10"
dependencies = []  # zero-dependency core; anthropic is an optional extra

[project.optional-dependencies]
llm = ["anthropic>=0.39"]
ui = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]

[project.scripts]
drop = "droplist.cli:main"
drop-review = "droplist.cli:review_main"
morning = "droplist.cli:morning_main"
inventory = "droplist.cli:inventory_main"
ship-from = "droplist.cli:shipfrom_main"
graph = "droplist.cli:graph_main"
brief = "droplist.cli:brief_main"
watch = "droplist.cli:watch_main"
droplist-ui = "droplist.server:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["droplist"]
