[project]
name = "droplist-packet-engine"
version = "0.1.0"
description = "Mini Ship #1: CLI-first RAG-DAG intake / Packet Engine for DropList / Atlas"
requires-python = ">=3.10"
# croniter: cron-expression math for the scheduler core (droplist/scheduler.py).
# Assemble-first — cron parsing is a solved category; hand-rolling would be
# strictly worse, not just later. See ~/.claude/rules/common/assemble-first.md.
dependencies = ["croniter>=2.0"]

[project.optional-dependencies]
# llm: swappable providers via litellm (Task B). anthropic kept for the legacy
# call_json path; litellm covers OpenAI/Gemini/OpenRouter/Ollama too.
llm = ["anthropic>=0.39", "litellm>=1.40"]
ui = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "slowapi>=0.1.9"]
# desktop: native-window app + single-file binary (Task E). pywebview uses the
# OS webview (EdgeWebView2 on Windows) — no bundled Chromium.
desktop = ["pywebview>=5.0", "pyinstaller>=6.0"]
# test: pytest + coverage for the CI quality gate (Task F). httpx backs
# fastapi.testclient. Assemble-first — no hand-rolled test harness.
test = ["pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.27"]

[project.scripts]
drop = "droplist.cli:main"
drop-review = "droplist.cli:review_main"
morning = "droplist.cli:morning_main"
inventory = "droplist.cli:inventory_main"
ship-from = "droplist.cli:shipfrom_main"
graph = "droplist.cli:graph_main"
brief = "droplist.cli:brief_main"
watch = "droplist.cli:watch_main"
droplist-ui = "droplist.server:run"
droplist-desktop = "droplist.desktop:main"
droplist-daemon = "droplist.daemon:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["droplist"]

[tool.coverage.run]
source = ["droplist"]
# desktop.py drives a native OS webview window — it cannot run in a headless CI
# runner, so it is excluded from the coverage denominator rather than faked.
omit = ["droplist/desktop.py"]

[tool.coverage.report]
show_missing = true
# Honest floor: the pytest-native suite clears ~63%. Core business-logic modules
# sit well above this (graph_engine 87%, state 98%, scheduler 93%, retrieval 97%,
# dag_update/router/watcher 100%); CLI + inventory scaffolding pull the aggregate
# down. The 9 script-style smoke gates run as subprocesses (test_smoke_gates.py)
# so their lines are NOT counted here — true exercised coverage is higher. Gate
# set to a level the suite actually passes, not a fabricated 80%.
fail_under = 60
