[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw"
version = "0.1.0"
description = "OpenClaw multi-channel messaging gateway — daily briefs, commands, notifications via Telegram, Slack, Discord"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "structlog>=24.1.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
channels = [
    "discord.py>=2.3.0",
    "python-telegram-bot>=21.0",
    "slack-sdk>=3.27.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
openclaw = "openclaw.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
