[project]
name = "search-stack"
version = "0.1.0"
description = "Unified search router for Pre Atlas — Exa + Tavily + Brave + Firecrawl + local code/file + GitHub. Single REST + MCP surface, per-provider budget tracking, SQLite cache."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "fastmcp>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[project.scripts]
search-stack = "search_stack.server:run"
search-stack-mcp = "search_stack.mcp_server:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
