[project]
name = "triangulation"
version = "0.1.0"
description = "Verifies auto-labeled UI components by cross-checking DOM, spatial, and visual signals."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
visual = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "pillow>=10.0.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that load the SigLIP-2 model (slow, opt-in)",
]
