[project]
name = "atlas-cli"
version = "0.1.0"
description = "GPS for Pre Atlas — CLI front-end over atlas-map-api (:3072)."
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.3"]

[project.scripts]
atlas = "atlas_cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
