[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirofish"
version = "0.1.0"
description = "MiroFish swarm simulation engine — document ingestion, knowledge graph, agent personalities, tick-based simulation, report generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "structlog>=24.1.0",
    "neo4j>=5.20.0",
    "jsonschema>=4.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
mirofish = "mirofish.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mirofish"]
